force-app/main/default/objects/RE_MY_VolumeConversion__c/RE_MY_VolumeConversion__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_MY_VolumeConversion</label>
</CustomObject>