force-app/main/default/objects/RE_MY_VolumeConversion__c/fields/RE_MY_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>