force-app/main/default/objects/RE_MY_VolumeConversion__c/fields/RE_MY_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Country__c</fullName>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>