force-app/main/default/objects/RE_MY_VolumeConversion__c/fields/RE_MY_Product_Subgroup__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Product_Subgroup__c</fullName>
    <label>Product Subgroup</label>
    <length>80</length>
    <type>Text</type>
</CustomField>