force-app/main/default/objects/RE_MY_VolumeConversion__c/fields/RE_MY_Volume_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_MY_Volume_Unit__c</fullName>
    <label>Volume Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>