force-app/main/default/objects/RE_MY_VolumeConversion__c/listViews/All_Column_View.listView-meta.xml
<ListView>
    <fullName>All_Column_View</fullName>
    <columns>NAME</columns>
    <columns>RE_MY_Base_Volume_Unit__c</columns>
    <columns>RE_MY_Conversion_Rate__c</columns>
    <columns>RE_MY_Country__c</columns>
    <columns>RE_MY_Product_Subgroup__c</columns>
    <columns>RE_MY_Volume_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Column View</label>
    <language>en_US</language>
</ListView>